--- a/QCMS/src/main/resources/config.properties
+++ b/QCMS/src/main/resources/config.properties
@@ -14,6 +14,7 @@ bar.areaUrl=http://localhost:8088/bar/area/
 addBarUrl=http://localhost:8088/add_bar/
 updateBarUrl=http://localhost:8088/update_bar/
 
+netbar.queryUrl=http://localhost:8088/netbar/query/
 
 barSyncLoginUrl=http://192.168.70.40:8080/netbar/services/loginInfo?wsdl
 barSyncDownLoadUrl=http://192.168.70.40:8080/netbar/services/NetbarInfo?wsdl
